--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <ul>
     <li>Problem solving</li>
     <li>Creativity</li>
-    <li>Patience</li>
+    <li>Сuriosity</li>
     <li>Communication</li>
     <li>Critical thinking</li>
 </ul>
